<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/rodTrekant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/r_d_trekant"
                android:padding="20dp"
                android:src="@drawable/ic_warning"
                android:tint="@color/varselRod"
                app:layout_constraintEnd_toStartOf="@+id/rodTekst"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/rodTekst" />

            <TextView
                android:id="@+id/rodTekst"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:text="@string/rodTekst"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toEndOf="@id/rodTrekant"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/oransjeTrekant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/gul_trekant"
                android:padding="20dp"
                android:src="@drawable/ic_warning"
                app:layout_constraintEnd_toStartOf="@+id/oransjeTekst"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/oransjeTekst" />

            <TextView
                android:id="@+id/oransjeTekst"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:scrollbars="vertical"
                android:text="@string/oransjeTekst"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toEndOf="@id/oransjeTrekant"
                app:layout_constraintTop_toBottomOf="@id/rodTekst" />


            <ImageView
                android:id="@+id/gronnTrekant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/gronn_trekant"
                android:padding="20dp"
                android:src="@drawable/ic_warning"
                android:tint="@color/varselGronn"
                app:layout_constraintEnd_toStartOf="@+id/gronnTekst"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/gronnTekst" />

            <TextView
                android:id="@+id/gronnTekst"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:text="@string/gronnTekst"
                app:layout_constraintEnd_toEndOf="@id/constraint"
                app:layout_constraintStart_toEndOf="@id/gronnTrekant"
                app:layout_constraintTop_toBottomOf="@id/oransjeTekst" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>