<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_background"
    android:orientation="horizontal"
    android:padding="20dp">

    <TextView
        android:id="@+id/vettregler"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:text="@string/vettregler"
        android:textAlignment="center"
        android:textAppearance="@style/tittelLys"
        app:layout_constraintBottom_toTopOf="@id/venstrelinje"
        app:layout_constraintEnd_toStartOf="@+id/hoyrelinje"
        app:layout_constraintHorizontal_bias="0.894"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/forberedelser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="50dp"
        android:text="@string/forberedelser"
        android:textAlignment="center"
        android:textAppearance="@style/tittelMork"
        app:layout_constraintBottom_toTopOf="@id/hoyrelinje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/vettregler"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/venstrelinje"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:background="@drawable/ic_lyslinje"
        app:layout_constraintEnd_toStartOf="@id/hoyrelinje"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vettregler"
        app:layout_constraintBottom_toTopOf="@id/vettTittel"/>

    <View
        android:id="@+id/hoyrelinje"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_morklinje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/venstrelinje"
        app:layout_constraintTop_toBottomOf="@id/forberedelser"
        app:layout_constraintBottom_toTopOf="@id/vettTittel"/>

    <TextView
        android:id="@+id/vettTittel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:isScrollContainer="false"
        android:layout_marginTop="100dp"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:text="@string/vettTittel"
        android:textAppearance="@style/vettTittel"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/vettreglerTekst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vettreglerTekst"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:lineSpacingExtra="23sp"
        android:padding="20dp"
        android:scrollbars="vertical"
        android:text="@string/vettreglerTekst"
        android:textAppearance="@style/tiTips"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vettTittel" />

</androidx.constraintlayout.widget.ConstraintLayout>