<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.IN2000_prosjekt.Home.HjemFragment"
    >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#8A0A2147"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabMenu"
            style="@style/Widget.Design.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            app:tint="@color/colorAccent"
            android:clickable="true"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            android:focusable="true" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:tint="@color/colorAccent"
        android:src="@drawable/ic_draw"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/coordinator"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabUndo"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_undo"
        android:visibility="invisible"
        android:backgroundTint="@color/colorPrimaryDark"
        app:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fabEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        android:src="@drawable/ic_lyshjerte"
        app:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fabUndo"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabTime"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Design.FloatingActionButton"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        android:src="@drawable/ic_clock"
        app:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/fabSave"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/pin"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/ic_pin"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ferdig"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ferdig"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.9"
        android:visibility="invisible"
        />

    <View
        android:id="@+id/vaermelding"
        android:layout_width="245dp"
        android:layout_height="237dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/ic_rectangle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/klokkeviser"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="60dp"
        android:text=""
        android:textAppearance="@style/klokkeviser"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toTopOf="@+id/vaermelding" />

    <TextView
        android:id="@+id/tempviser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="100dp"
        android:text=""
        android:textAppearance="@style/vaermelding"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toTopOf="@+id/vaermelding" />

    <TextView
        android:id="@+id/bolgeviser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text=""
        android:textAppearance="@style/vaermelding"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toBottomOf="@+id/tempviser" />

    <TextView
        android:id="@+id/stromningviser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text=""
        android:textAppearance="@style/vaermelding"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toBottomOf="@+id/bolgeviser" />

    <TextView
        android:id="@+id/bolgeHoydeViser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text=""
        android:textAppearance="@style/vaermelding"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toBottomOf="@+id/stromningviser" />

    <TextView
        android:id="@+id/tid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="90dp"
        android:elevation="10dp"
        android:text=""
        android:textAppearance="@style/klokke"
        app:layout_constraintEnd_toEndOf="@+id/klokkebakgrunn"
        app:layout_constraintStart_toStartOf="@+id/klokkebakgrunn"
        app:layout_constraintTop_toTopOf="@+id/klokkebakgrunn" />

    <TextView
        android:id="@+id/dato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:elevation="10dp"
        android:text=""
        android:textAppearance="@style/tittelDato"
        app:layout_constraintEnd_toEndOf="@+id/klokkebakgrunn"
        app:layout_constraintStart_toStartOf="@+id/klokkebakgrunn"
        app:layout_constraintTop_toTopOf="@+id/klokkebakgrunn"
        />

    <TextView
        android:id="@+id/dato2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:elevation="10dp"
        android:text=""
        android:textAppearance="@style/vaermelding"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toTopOf="@+id/vaermelding" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plussKnapp"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/pluss"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/klokkebakgrunn"
        app:layout_constraintEnd_toEndOf="@+id/klokkebakgrunn"
        app:layout_constraintStart_toEndOf="@+id/dato"
        app:layout_constraintTop_toTopOf="@+id/klokkebakgrunn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minusKnapp"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/klokkebakgrunn"
        app:layout_constraintEnd_toStartOf="@+id/tid"
        app:layout_constraintStart_toStartOf="@+id/klokkebakgrunn"
        app:layout_constraintTop_toTopOf="@+id/klokkebakgrunn" />


    <ImageView
        android:id="@+id/Trekant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:src="@drawable/ic_warning"
        android:tint="@color/varselRod"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/vaermelding"
        app:layout_constraintTop_toTopOf="@+id/vaermelding"
        android:contentDescription="@string/trekant" />


    <View
        android:id="@+id/klokkebakgrunn"
        android:layout_width="247dp"
        android:layout_height="120dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/klokke_firkant"
        android:padding="10dp"
        android:requiresFadingEdge="horizontal|vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>